--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link
       data-n-head="ssr"
       rel="shortcut icon"
-      href="/favicon.ico"
+      href="/img/favicon.ico"
       type="image/x-icon"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
